# 4PSoku

./: CMakeLists.txt  README.md
src/: main.cpp
src/Common/: CustomPackets.cpp  CustomPackets.hpp
src/Server/: Server.cpp  Server.hpp  main.cpp
src/SokuMod/: convert_data.sh  main.cpp  version.rc
src/SokuMod/assets/data/battle/: battleUnder_4p.xml
src/SokuMod/assets/data/infoeffect/: effect_4p.xml  effect_4p_invis.xml
